--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "LambDevelopment",
-  "version": "0.0.0",
-  "private": true,
+  "name": "LambSampleApp",
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
     "start": ["node ./bin/www", "index.html"]
   },
@@ -18,10 +18,5 @@
     "node-uuid": "^1.4.3",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.6"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-firefox-launcher": "^0.1.6"
   }
 }
