--- a/public/lib/apLamb/package.json
+++ b/public/lib/apLamb/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "apSock",
-  "version": "1.0.0",
-  "description": "apSock is n AngularJS service that provides a simple API to the socket.io library",
+  "name": "apLamb",
+  "version": "2.0.0",
+  "description": "\"Little Angular Message Bus\"",
   "main": "Gruntfile.js",
   "dependencies": {
     "grunt": "^0.4.5",
