--- a/bower.json
+++ b/bower.json
@@ -11,10 +11,9 @@
   ],
   "dependencies": {
     "angular": "^1.4.5",
-    "angular-bootstrap": "^0.13.4",
+    "angular-bootstrap": "^1.2.1",
     "angular-messages": "^1.4.5",
     "angular-route": "^1.4.5",
-    "bootstrap-css": "^3.3.4",
-    "apLamb": "^2.0.0"
+    "bootstrap-css": "^3.3.4"
   }
 }
