--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "LambSampleApp",
+  "name": "LambDevelopment",
+  "description": "Lamb Development and Tests",
+  "license": "UNLICENSED",
   "version": "1.0.0",
-  "private": false,
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alvin-pivowar/LambDevelopmemntSandbox.git"
+  },
   "scripts": {
     "start": ["node ./bin/www", "index.html"]
   },
@@ -12,7 +18,7 @@
     "ejs": "^2.3.3",
     "express": "^4.13.1",
     "http-status-codes": "^1.0.5",
-    "less-middleware": "1.0.x",
+    "less-middleware": "2.1.x",
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
     "node-uuid": "^1.4.3",
