--- a/public/lib/apLamb/package.json
+++ b/public/lib/apLamb/package.json
@@ -3,13 +3,19 @@
   "version": "2.0.0",
   "description": "\"Little Angular Message Bus\"",
   "main": "Gruntfile.js",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-uglify": "^0.9.2"
+    "grunt-contrib-uglify": "^0.11.1",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.21",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-spec-reporter": "0.0.24",
+    "phantomjs-prebuilt": "^2.1.4"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
